<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnFastFood"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/fastfood"
        fancy:fb_textColor="@color/colorPrimaryDark" />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSweet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/sweet"
        fancy:fb_textColor="@color/colorPrimaryDark" />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnFruit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/fruit"
        fancy:fb_textColor="@color/colorPrimaryDark" />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnDrink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/drink"
        fancy:fb_textColor="@color/colorPrimaryDark" />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSuper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/supermarket"
        fancy:fb_textColor="@color/colorPrimaryDark" />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnOther"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        fancy:fb_defaultColor="#E3F2FD"
        fancy:fb_focusColor="#BBDEFB"
        fancy:fb_text="@string/other"
        fancy:fb_textColor="@color/colorPrimaryDark" />


</LinearLayout>