<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hh"/>
        <TextView
            android:id="@+id/txt_bmi"
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/rg_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioButton
            android:id="@+id/rb_ex_sedentary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedentary_exercise"/>
        <RadioButton
            android:id="@+id/rb_ex_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_exercise"/>
        <RadioButton
            android:id="@+id/rb_ex_moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderate_exercise"/>
        <RadioButton
            android:id="@+id/rb_ex_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_exercise"/>
        <RadioButton
            android:id="@+id/rb_ex_veryhard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_hard_exercise"/>

    </RadioGroup>



    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#9E9D24"
        fancy:fb_borderWidth="2dp"
        fancy:fb_defaultColor="#DCE775"
        fancy:fb_focusColor="#C0CA33"
        fancy:fb_radius="10dp"
        fancy:fb_text="@string/next"
        fancy:fb_textColor="#827717"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>