<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tellme" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_weight" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edt_weight"
                style="@style/Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kilograms"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edt_height"
                style="@style/Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/centimeters"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edt_age"
                style="@style/Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/years"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</LinearLayout>