<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muscle_exercise" />

    <RadioGroup
        android:id="@+id/rg_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RadioButton
            android:id="@+id/rb_noexercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_ex"/>
        <RadioButton
            android:id="@+id/rb_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex"/>

    </RadioGroup>






</LinearLayout>