<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        style="@style/Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tellme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_weight" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edt_weight"
                style="@style/Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kilograms"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BodyFat" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/edtBodyFat"
                style="@style/Edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/percent"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#9E9D24"
        fancy:fb_borderWidth="2dp"
        fancy:fb_defaultColor="#DCE775"
        fancy:fb_focusColor="#C0CA33"
        fancy:fb_radius="10dp"
        fancy:fb_text="@string/next"
        fancy:fb_textColor="#827717"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>