<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Question"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/kilograms"
            android:inputType="number"
            style="@style/Edt"
            android:paddingLeft="16dp" />
    </android.support.design.widget.TextInputLayout>
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#9E9D24"
        fancy:fb_borderWidth="2dp"
        fancy:fb_defaultColor="#DCE775"
        fancy:fb_focusColor="#C0CA33"
        fancy:fb_radius="10dp"
        fancy:fb_text="@string/save"
        fancy:fb_textColor="#827717"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>